Se elimino las flechas de los input Number

--- a/Public/Styles/style.css
+++ b/Public/Styles/style.css
@@ -857,3 +857,9 @@
     justify-content: center;
     align-items: center;
 }
+
+input::-webkit-outer-spin-button,
+input::-webkit-inner-spin-button {
+    appearance: none;
+    margin: 0;
+}
