--- a/Public/views/Home.html
+++ b/Public/views/Home.html
@@ -13,7 +13,7 @@
         <div class="home-conteiner">
             <div class="conteiner-logotype">
                 <img class="conteiner-logotype__logotype" src="Public/Assets/poke-logo.png" alt="">
-                <img class="conteiner-logotype__logotype conteiner-logotype__logotype--effect" src="Public/Assets/poke-logo.png" alt="">
+                <img class="conteiner-logotype__logotype conteiner-logotype__logotype--effect home-title-effect" src="Public/Assets/poke-logo.png" alt="">
             </div>
             <h1 class="home-conteiner__title"><a href="/Pokedex">Press Start</a></h1>
         </div>
