--- a/Public/views/Pokemon.pug
+++ b/Public/views/Pokemon.pug
@@ -70,7 +70,10 @@ block content
                         div.flex
                             p.ability-p Habitat
                             each value in locals.pokemonData.habitat
-                                p.ability-p= value
+                                if value !== null
+                                    p.ability-p= value
+                                else 
+                                    p.ability-p= '???'
                     div.flex
                         p.ability-p Rate  
                         p.ability-p=`${locals.pokemonData.rate}%`
@@ -110,7 +113,7 @@ block content
                         div.bar-background.bar-background--pink
                             div.bar-front.bar-front--pink
                                 p.stat-text= `${value.stat.name} ${value.base_stat}` 
-            if (locals.pokemonData["evolution_chain"] !== null)                      
+            if (locals.pokemonData["evolution_chain"] > 0)          
                 p.title Evolution chain
                 div.box-evolution.flex
                     -let count = 1
