--- a/Public/views/Add.pug
+++ b/Public/views/Add.pug
@@ -67,5 +67,10 @@ block content
                     input(id="myt" type="checkbox" name="mythical")
                 input(type="button" value="Sig")#arrow_Right.arrowbuttonstest
             input( type="submit" value="Submit" form="form").subform
+        div.conteiner-pagination__add-db
+                    a(href="/PokemonAdd" )
+                        img(src="/Public/Assets/poke-add.png", alt="add").add-button#iconAdd
+                    a(href="/Fav" )
+                        img(src="/Public/Assets/hearth.png", alt="fav").nav__logo.fav_icon#iconFav
     script(type="module" src="/Public/Js/form.js") 
     include footer.pug
